Support for reporting failed image uploads via XHR
Clear format of returned response in update rank form

Proper handling of managing categories with jstree

Bootstrap select will no longer throw an error on empty <option> list

Old UI category tree will no longer throw errors on toggling children

Fixed malformed HTML

--- a/app/views/listings/_social_buttons.html.liquid
+++ b/app/views/listings/_social_buttons.html.liquid
@@ -24,8 +24,8 @@
     </div>
 
     <div class="linkedin">
-      <script src="//platform.linkedin.com/in.js" type="text/javascript" lang='en_US'</script>
-      <script type="IN/Share" data-counter="right" data-url='{{ url }}'</script>
+      <script src="//platform.linkedin.com/in.js" type="text/javascript" lang='en_US'></script>
+      <script type="IN/Share" data-counter="right" data-url='{{ url }}'></script>
     </div>
 
     <div class="google-plus">
