NM-3982 Confirmation has status inactive

--- a/app/new_ui_views/dashboard/user_reservations/_reservation.html.haml
+++ b/app/new_ui_views/dashboard/user_reservations/_reservation.html.haml
@@ -14,7 +14,7 @@
       .col-sm-5
         .order-status
           %span{class: reservation.state }
-            = reservation.state.humanize.capitalize
+            = t "reservations.states.#{reservation.state}"
 
 
   - if reservation.state == 'unconfirmed'
