--- a/app/views/layouts/dashboard.html.haml
+++ b/app/views/layouts/dashboard.html.haml
@@ -30,7 +30,9 @@
     = render 'layouts/favicon'
 
     = stylesheet_link_tag 'dashboard'
-    = stylesheet_link_tag dynamic_theme_url('dashboard')
+    %style
+      = render 'dynamic_themes/dashboard'
+
     = render 'shared/head/fonts'
 
     = render 'layouts/homepage_css' if home_page?
