Reenabled dynamic themes rendering

--- a/app/views/layouts/blog.html.haml
+++ b/app/views/layouts/blog.html.haml
@@ -17,8 +17,7 @@
     = stylesheet_link_tag 'application'
     = render 'shared/head/fonts'
 
-    %style
-      = render 'dynamic_themes/application'
+    = stylesheet_link_tag dynamic_theme_path_for_current_theme(:application)
 
     = render 'shared/javascripts/header'
 
