--- a/app/new_ui_views/layouts/dashboard.html.haml
+++ b/app/new_ui_views/layouts/dashboard.html.haml
@@ -12,8 +12,7 @@
     = stylesheet_link_tag 'new_ui'
     = render 'shared/head/fonts'
 
-    %style
-      = render 'dynamic_themes/new_ui'
+    = stylesheet_link_tag dynamic_theme_path_for_current_theme(:new_ui)
 
     / Prefetch
     = render 'layouts/content_holder_injector'
