--- a/app/views/layouts/dashboard.html.haml
+++ b/app/views/layouts/dashboard.html.haml
@@ -30,8 +30,7 @@
     = render 'layouts/favicon'
 
     = stylesheet_link_tag 'dashboard'
-    %style
-      = render 'dynamic_themes/dashboard'
+    = stylesheet_link_tag dynamic_theme_path_for_current_theme(:dashboard)
 
     = render 'shared/head/fonts'
 
