Proper clearing of labels in profile

--- a/app/frontend/stylesheets/sections/_user_profile.scss
+++ b/app/frontend/stylesheets/sections/_user_profile.scss
@@ -152,7 +152,7 @@
 
     @media (min-width: 769px) {
         dt {
-            clear: left;
+            clear: both;
             float: left;
             width: 20%;
             margin-bottom: 1em;
