NM-3977 Fixed price listings should not have the price display the slash

--- a/app/views/search/mixed/_individual_listing.html.liquid
+++ b/app/views/search/mixed/_individual_listing.html.liquid
@@ -39,7 +39,10 @@
         <div class="location-price">
           {% assign price_info = listing | lowest_price_without_cents_with_currency: lgpricing_filters %}
           {% if price_info.price %}
-            {{ 'search.price_from' | translate }} <span>{{ price_info.price }}</span> / {{ price_info.period }}
+            {{ 'search.price_from' | translate }} <span>{{ price_info.price }}</span>
+            {% if price_info.period != blank %}
+              / {{ price_info.period }}
+            {% endif %}
           {% elsif price_info.free %}
             <span>{{ 'search.free_listing' | translate }}</span>
           {% endif %}
