--- a/app/views/search/mixed/_listing.html.liquid
+++ b/app/views/search/mixed/_listing.html.liquid
@@ -11,7 +11,10 @@
   <div class="span2 listing-price padding-top">
     {% assign price_info = listing | lowest_price_without_cents_with_currency: lgpricing_filters %}
     {% if price_info.price %}
-      {{ price_info.price}} / <span>{{ price_info.period }}</span>
+      {{ price_info.price}}
+      {% if price_info.period != blank %}
+        / <span>{{ price_info.period }}</span>
+      {% endif %}
     {% elsif price_info.free %}
       <span>{{ 'search.free_listing' | translate }}</span>
     {% endif %}
