NM-4134 fixes ignored sms templates customization

--- a/app/new_ui_views/dashboard/user_reservations/_reservation_successful.html.haml
+++ b/app/new_ui_views/dashboard/user_reservations/_reservation_successful.html.haml
@@ -1,5 +1,5 @@
 %h4.reservation-emphasis
-  Your booking was requested successfully!
+  = t('dashboard.user_reservations.booking_successful')
 
 .reservation-list.just-booked
   = render 'reservation', reservation: @reservation.decorate
