NM-4145 Video will now adjust to small screens correctly

--- a/app/community_views/home/_home_not_signed_in.html.liquid
+++ b/app/community_views/home/_home_not_signed_in.html.liquid
@@ -38,8 +38,8 @@
   <div class="intro-video-overlay"></div>
   <div class="intro-video-wrapper">
     <div id="intro-player"></div>
-    <button type="button" class="intro-video-close button-a">Close</button>
   </div>
+  <button type="button" class="intro-video-close">Hide Video</button>
 </div>
 
 <div class="wrap-a white">
