--- a/app/frontend/stylesheets/intel/modules/_intro-video.scss
+++ b/app/frontend/stylesheets/intel/modules/_intro-video.scss
@@ -36,6 +36,7 @@
         top: 50%;
         width: 100%;
         max-width: 1280px;
+        max-height: 90vh;
         transform: translate(-50%, -50%);
         z-index: 1120;
         margin: 0;
@@ -50,20 +51,26 @@
         iframe {
             display: block;
             position: absolute;
-            width: calc(100% - 40px);
-            left: 20px;
-            right: 20px;
-            top: 20px;
-            height: calc(100% - 22px);
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
             margin: 0;
         }
     }
 
     .intro-video-close {
-        left: 50%;
-        position: absolute;
-        margin-top: 30px;
-        transform: translateX(-50%);
+        position: fixed;
+        z-index: 2000;
+        padding: 0;
+        margin: 0;
+        color: #fff;
+        text-transform: uppercase;
+        background: none;
+        border: none;
+        top: 10px;
+        right: 10px;
+        font-size: 12px;
+        font-weight: bold;
     }
 }
 
