--- a/app/community_views/search/filters/_people.html.haml
+++ b/app/community_views/search/filters/_people.html.haml
@@ -15,4 +15,4 @@
         %span= @searcher.result_count
         = t :results_count
 
-      = f.input :sort, as: :select, collection: User::SORT_OPTIONS, prompt: t(:sort, scope: [:simple_form, :placeholders, :search_filter]), input_html: { class: 'selectize'}, wrapper_html: { class: 'sort' }, selected: params[:sort]
+      = f.input :sort, as: :select, collection: User::SORT_OPTIONS.map { |option| [I18n.t("simple_form.labels.search_filter.options.#{option}"), option] }, prompt: t(:sort, scope: [:simple_form, :placeholders, :search_filter]), input_html: { class: 'selectize'}, wrapper_html: { class: 'sort' }, selected: params[:sort]
