Intel video clost button with blue background

--- a/app/community_views/home/_home_not_signed_in.html.liquid
+++ b/app/community_views/home/_home_not_signed_in.html.liquid
@@ -39,7 +39,7 @@
   <div class="intro-video-wrapper">
     <div id="intro-player"></div>
   </div>
-  <button type="button" class="intro-video-close">Hide Video</button>
+  <button type="button" class="intro-video-close button-a">Close Video</button>
 </div>
 
 <div class="wrap-a white">
