--- a/app/frontend/stylesheets/intel/modules/_intro-video.scss
+++ b/app/frontend/stylesheets/intel/modules/_intro-video.scss
@@ -61,12 +61,10 @@
     .intro-video-close {
         position: fixed;
         z-index: 2000;
-        padding: 0;
+        padding: 5px 10px;
         margin: 0;
-        color: #fff;
+        // color: #fff;
         text-transform: uppercase;
-        background: none;
-        border: none;
         top: 10px;
         right: 10px;
         font-size: 12px;
