NM-4136 Wrong name of attachment file

--- a/app/new_ui_views/dashboard/shared/attachments/_approval_request_attachment.html.haml
+++ b/app/new_ui_views/dashboard/shared/attachments/_approval_request_attachment.html.haml
@@ -1,7 +1,7 @@
 %li{ class: "type-#{File.extname(attachment.file.file.filename).gsub('.','')}", data: {'attachment' => attachment.id } }
   .attachment-container
     %span.link
-      = link_to attachment.file.file.filename, attachment.file.url, download: attachment.file.file.filename
+      = link_to remote_storage_file_name(attachment.file.file), attachment.file.url, download: attachment.file.file.filename
     %span.meta
       %time{ datetime: attachment.created_at }
         = l(attachment.created_at.to_date, format: :long)
