--- a/app/new_ui_views/dashboard/company/orders_received/show.html.haml
+++ b/app/new_ui_views/dashboard/company/orders_received/show.html.haml
@@ -66,6 +66,8 @@
               - if @order.paid?
                 %span.label.label-info
                   = t('buy_sell_market.checkout.labels.payments.paid')
+              - elsif @order.payment.manual_payment?
+                = link_to t('buy_sell_market.checkout.labels.payments.mark_as_paid'), capture_dashboard_company_orders_received_payment_path(@order.number, @order.payment.id), method: :post, data: { confirm: 'Are you sure you want to mark this order as paid?' }, class: 'btn btn-primary'
               - elsif @order.payment.authorized?
                 - if @order.payment.manual_payment?
                   = link_to 'Mark As Paid', capture_dashboard_company_orders_received_payment_path(@order.number, @order.payment.id), method: :post, data: { confirm: 'Are you sure you want to mark this order as paid?' }, class: 'btn btn-primary'
