NM-4181 Fixed button width on product search / Firefox

--- a/app/frontend/stylesheets/themes/_buy_sell.scss
+++ b/app/frontend/stylesheets/themes/_buy_sell.scss
@@ -1234,6 +1234,11 @@ body.buy-sell-theme {
       padding: initial;
     }
 
+    &.search-view-listing .btn.search {
+        padding: 0;
+        width: 36px;
+    }
+
     .search-bar.mobile form input {
       width: 70%;
       margin-bottom: 20px;
