--- a/app/new_ui_views/dashboard/company/merchant_accounts/_stripe_connect.html.haml
+++ b/app/new_ui_views/dashboard/company/merchant_accounts/_stripe_connect.html.haml
@@ -67,6 +67,13 @@
             partial: 'dashboard/company/merchant_accounts/stripe_connect_owner_fields', render_options: {locals: {merchant_account: merchant_account}}
           %br
 
+    - if PlatformContext.current.instance.skip_company?
+      .form-group.string.optional
+        = maf.simple_fields_for :current_address, maf.object.current_address || Address.new do |address_form|
+          .fields.location
+            = render 'dashboard/shared/fields/address', f: address_form, field_label: t('simple_form.labels.merchant_account.current_address')
+
+
     %label
       = maf.check_box :tos
       Payment processing services for #{platform_context.lessee} on #{platform_context.name} are provided by Stripe and are subject to the <a href="https://stripe.com/connect/account-terms" target="_blank">Stripe Connected Account Agreement</a>, which includes the <a href="https://stripe.com/us/terms" target="_blank">Stripe Terms of Service</a> (collectively, the “Stripe Services Agreement”). By agreeing to [this agreement / these terms / etc.] or continuing to operate as a #{platform_context.lessee} on #{platform_context.name}, you agree to be bound by the Stripe Services Agreement, as the same may be modified by Stripe from time to time. As a condition of #{platform_context.name} enabling payment processing services through Stripe, you agree to provide #{platform_context.name} accurate and complete information about you and your business, and you authorize #{platform_context.name} to share it and transaction information related to your use of the payment processing services provided by Stripe.
