--- a/app/community_views/search/community.html.haml
+++ b/app/community_views/search/community.html.haml
@@ -1,3 +1,4 @@
+- params[:search_type] = params[:search_type].present? && %w(people projects topics) ? params[:search_type] : 'projects'
 .wrap-a.reduce-top
   .contain
     / tabs
