--- a/app/community_views/registrations/_show_following.html.haml
+++ b/app/community_views/registrations/_show_following.html.haml
@@ -20,7 +20,7 @@
     .box-a
       .tab-content
         #following-people.tab-pane.fade.active
-          = render 'shared/sort_form', form_url: see_more_following_people_path(id: @user.id, type: @user.class.name), sort_options: User::SORT_OPTIONS, container: '#following-people'
+          = render 'shared/sort_form', form_url: see_more_following_people_path(id: @user.id, type: @user.class.name), sort_options: User::SORT_OPTIONS.map { |option| [I18n.t("simple_form.labels.search_filter.options.#{option}"), option] }, container: '#following-people'
           = render "shared/listing_people", users: @users_followed, see_more_type: "followingPeople", see_more_route: see_more_following_people_path(id: @user.id, type: @user.class.name, container: '#following-people')
         #following-projects.tab-pane.fade
           = render "shared/show_projects", projects: @projects_followed, container: '#following-projects', see_more_route: see_more_following_projects_path(id: @user.id, type: @user.class.name, container: '#following-projects')
