NM-4138 No red text for missing photo

--- a/app/frontend/stylesheets/new_ui/forms/_errors.scss
+++ b/app/frontend/stylesheets/new_ui/forms/_errors.scss
@@ -8,6 +8,11 @@
     }
 }
 
+.generic-help-block {
+  color: #e55d51;
+  font-style: italic;
+}
+
 .errors-global {
     margin: 0 30px 30px;
     padding: 30px;
