NM-3929 MPO logs enhancements

--- a/app/views/shared/javascripts/_header.html.haml
+++ b/app/views/shared/javascripts/_header.html.haml
@@ -1,6 +1,7 @@
 = render "shared/javascripts/javascript_assets"
 
 = render 'shared/javascripts/raygun/libs'
+= render 'shared/javascripts/marketplace_logger'
 
 = render 'shared/javascripts/ckeditor_basepath'
 
