--- a/app/community_views/projects/show.html.haml
+++ b/app/community_views/projects/show.html.haml
@@ -17,7 +17,7 @@
         .user
           %figure
             = link_to user_path(@project.creator) do
-              = image_tag @project.creator.avatar.url(:thumb), width: 40, height: 40, alt: @project.creator.decorate.name_with_affiliation
+              = image_tag @project.creator.avatar.url(:thumb), width: 40, height: 40, alt: @project.creator.decorate.name_with_affiliation(true)
           %h3.hx
             = link_to @project.creator.decorate.name_with_affiliation, user_path(@project.creator)
           %p.location= "#{@project.creator.current_address.try(:city)}, #{@project.creator.current_address.try(:state)}"
