--- a/app/community_views/registrations/show.html.haml
+++ b/app/community_views/registrations/show.html.haml
@@ -6,7 +6,7 @@
   .contain
     .header
       %figure
-        = image_tag @user.avatar.url(:big), size: "180x180", alt: @user.decorate.name_with_affiliation
+        = image_tag @user.avatar.url(:big), size: "180x180", alt: @user.decorate.name_with_affiliation(true)
       %h2.hx= @user.decorate.name_with_affiliation
       = @user.decorate.display_address
       - if @user.featured?
