--- a/app/new_ui_views/dashboard/shared/fields/_address.html.haml
+++ b/app/new_ui_views/dashboard/shared/fields/_address.html.haml
@@ -1,7 +1,10 @@
 %div{'data-address-field' => true, class: "form-group #{"has-error" if f.object.errors.any?}"}
 
 
-  = f.label :address, field_label, required: true
+  = f.label :address, required: true do
+    %abbr{ title: "required" }
+      *
+    = field_label
 
   = f.text_field :address, :'data-behavior' => 'address-autocomplete', placeholder: t('locations.address_placeholder'), 'data-address-input' => true, class: 'form-control'
 
