--- a/app/views/search/listing_mixed.html.haml
+++ b/app/views/search/listing_mixed.html.haml
@@ -51,7 +51,8 @@
             .container-fluid
               .row-fluid
                 .span2
-                  %h4 Service Type
+                  %h4
+                    = t('search.service_type')
                 .span10
                   %ul
                     - current_instance.service_types.searchable.each do |transactable_type|
